# anything-rs

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/facade/: Cargo.toml  build.rs
crates/facade/quicklook-shim/: quicklook_shim.h  quicklook_shim.m
crates/facade/src/: anything_list.rs  anything_list_item.rs  anything_table_view.rs  anything_view.rs  asset.rs  demo.rs  demo_table_view.rs  lib.rs  quicklook.rs  root.rs  title_bar.rs
crates/facade/src/component/: anything_item.rs  anything_table.rs  custom_icon.rs  mod.rs
crates/indexify/: Cargo.toml
crates/indexify/src/: lib.rs  utils.rs
crates/indexify/tests/: index_test.rs
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs
crates/sentrify/: Cargo.toml
crates/sentrify/src/: lib.rs
crates/vaultify/: Cargo.toml
crates/vaultify/src/: lib.rs
ignition/: Cargo.toml
ignition/src/: main.rs
