[workspace]
resolver = "3"
members = [
    "crates/indexify",
    "crates/logger",
    "crates/vaultify",
    "crates/facade",
    "crates/sentrify",
    "crates/dependencies/tantivy-jieba",
    "ignition",
]

[workspace.dependencies]
tantivy = "0.24.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
crossbeam-channel = "0.5.15"
tempfile = "3.20.0"
directories = "6.0.0"
anyhow = "1.0.98"
serde_json = "1.0.140"
once_cell = "1.21.3"
