[workspace]
resolver = "3"
members = [
    "crates/indexify",
    "crates/logger",
    "crates/vaultify",
    "crates/facade",
    "crates/sentrify",
    "ignition",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
indexify = { path = "crates/indexify" }
logger = { path = "crates/logger" }
vaultify = { path = "crates/vaultify" }
facade = { path = "crates/facade" }
sentrify = { path = "crates/sentrify" }
ignition = { path = "ignition" }

notify = { version = "8.0.0", features = ["crossbeam-channel"] }
tantivy = "0.24.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
crossbeam-channel = "0.5.15"
tempfile = "3.20.0"
directories = "6.0.0"
anyhow = "1.0.98"
serde_json = "1.0.140"
once_cell = "1.21.3"
smol = "2.0.2"
time = "0.3.41"
whichlang = "0.1.1"
jwalk = "0.8.1"
rust-embed = "8.7.2"
serde = "1.0.203"
redb = "2.5.0"
tantivy-jieba = "0.13.0"
material-icon-embed-rs = "0.1.0"

gpui = { git = "https://github.com/huacnlee/zed.git", branch = "webview" }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }
