[package]
name = "ignition"
version = "0.1.0"
edition = "2024"

[dependencies]
tantivy.workspace = true
tracing.workspace = true
crossbeam-channel.workspace = true
directories.workspace = true
anyhow.workspace = true
smol.workspace = true
indexify.workspace = true
vaultify.workspace = true
logger.workspace = true
facade.workspace = true
sentrify.workspace = true
