[package]
name = "ignition"
version.workspace = true
edition.workspace = true

[[bin]]
name = "anything"
path = "src/main.rs"

[dependencies]
tantivy.workspace = true
tracing.workspace = true
crossbeam-channel.workspace = true
directories.workspace = true
anyhow.workspace = true
smol.workspace = true
indexify.workspace = true
vaultify.workspace = true
logger.workspace = true
facade.workspace = true
sentrify.workspace = true
