[package]
name = "ignition"
version.workspace = true
edition.workspace = true

[[bin]]
name = "anything"
path = "src/main.rs"

[dependencies]
tantivy.workspace = true
tracing.workspace = true
crossbeam-channel.workspace = true
directories.workspace = true
anyhow.workspace = true
smol.workspace = true
indexify.workspace = true
vaultify.workspace = true
logger.workspace = true
facade.workspace = true
sentrify.workspace = true

[package.metadata.bundle]
name = "Anything"
identifier = "io.github.oops418.anything"
icon = ["assets/images/icon.png"]
category = "utilities"
short_description = "A cross-platform file search tool built with Rust. Available for macOS, Linux, and soon for Windows."
