[package]
name = "facade"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-embed = "8.7.2"
serde = "1.0.203"

anyhow = { workspace = true }
tracing = { workspace = true }
smol = { workspace = true }

vaultify = { path = "../vaultify" }
gpui = { git = "https://github.com/huacnlee/zed.git", branch = "webview" }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }
