[package]
name = "facade"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-embed.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
smol.workspace = true
time.workspace = true
vaultify.workspace = true
gpui.workspace = true
gpui-component.workspace = true
material-icon-embed-rs.workspace = true
