[package]
name = "indexify"
version = "0.1.0"
edition = "2024"

[dependencies]
whichlang.workspace = true
jwalk.workspace = true
once_cell.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
tantivy.workspace = true
smol.workspace = true

anyhow.workspace = true
time.workspace = true
vaultify.workspace = true
facade.workspace = true
tantivy-jieba.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
mock = []
