[package]
name = "sentrify"
version = "0.1.0"
edition = "2024"

[dependencies]
notify.workspace = true
crossbeam-channel.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde_json.workspace = true
vaultify.workspace = true
indexify.workspace = true
logger.workspace = true

[dev-dependencies]
tempfile.workspace = true
logger.workspace = true

[features]
mock = []
