[package]
name = "sentrify"
version.workspace = true
edition.workspace = true

[dependencies]
notify.workspace = true
crossbeam-channel.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde_json.workspace = true
vaultify.workspace = true
indexify.workspace = true
logger.workspace = true

[dev-dependencies]
tempfile.workspace = true
logger.workspace = true

[features]
mock = []
