[package]
name = "vaultify"
version = "0.1.0"
edition = "2024"

[dependencies]
redb = "2.5.0"

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = { workspace = true }
directories = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
