[package]
name = "vaultify"
version.workspace = true
edition.workspace = true

[dependencies]
redb.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
once_cell.workspace = true
tempfile.workspace = true
directories.workspace = true
anyhow.workspace = true
serde_json.workspace = true

[features]
mock = []
